--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <h1 data-scroll-reveal="enter from the bottom after 0.2s">Hellow, <br>This is Mohan Srikanth karnati
                         </h1>
 
-                        <h4 data-scroll-reveal="enter from the bottom after 0.4s">I am a Web developer create responsive websites to attract customers and helps to grow business faster.
+                        <h4 data-scroll-reveal="enter from the bottom after 0.4s">I am a Java developer create responsive websites to attract customers and helps to grow business faster.
 
                         </h4>
                         <a data-scroll-reveal="enter from the bottom after 0.6s" href="#services" class="btn btn-danger set-bk-clr">Explore Profile</a>
