--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="row scroll-me">
                     <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 text-center ">
 
-                        <h1 data-scroll-reveal="enter from the bottom after 0.2s">Hellow, <br>This is Mohan
+                        <h1 data-scroll-reveal="enter from the bottom after 0.2s">Hellow, <br>This is Mohan Sri
                         </h1>
 
                         <h4 data-scroll-reveal="enter from the bottom after 0.4s">I am a Java developer create responsive websites to attract customers and helps to grow business faster.
@@ -258,3 +258,4 @@
 
 </body>
 </html>
+
