--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="row scroll-me">
                     <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 text-center ">
 
-                        <h1 data-scroll-reveal="enter from the bottom after 0.2s">Hellow, <br>This is Mohan deploying first k8's auto sync success deployment
+                        <h1 data-scroll-reveal="enter from the bottom after 0.2s">Hellow, <br>This is Mohan srikanth Karnati working as Releaase Engineer.
                         </h1>
 
                         <h4 data-scroll-reveal="enter from the bottom after 0.4s">I am a Web developer create responsive websites to attract customers and helps to grow business faster.
